[gd_scene load_steps=17 format=3 uid="uid://u2mwkg27ekrm"]

[ext_resource type="Script" path="res://windows/stats/stats.gd" id="1_8b5yy"]
[ext_resource type="FontFile" uid="uid://cveouj21bacwl" path="res://assets/fonts/Daniel-Black.otf" id="2_jqj7o"]
[ext_resource type="FontFile" uid="uid://xubed831mtc" path="res://assets/fonts/danielbd.ttf" id="3_8lc0f"]
[ext_resource type="PackedScene" uid="uid://btpsq0pkyop8" path="res://windows/home_button.tscn" id="3_tmf4h"]
[ext_resource type="FontFile" uid="uid://r4sxbgrmy3g1" path="res://assets/fonts/daniel.ttf" id="4_ffnnt"]
[ext_resource type="Texture2D" uid="uid://mw5rdvc7tyi5" path="res://assets/choose-focus/arrow.png" id="6_v7wui"]
[ext_resource type="Texture2D" uid="uid://b3pei7u7qqgol" path="res://assets/misc/founder_badge.png" id="7_xtto1"]

[sub_resource type="Animation" id="Animation_bl4rw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.894922, 0.894922, 0.894922, 1)]
}

[sub_resource type="Animation" id="Animation_f17oi"]
resource_name = "in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(-1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.894922, 0.894922, 0.894922, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1c23r"]
_data = {
"RESET": SubResource("Animation_bl4rw"),
"in": SubResource("Animation_f17oi")
}

[sub_resource type="Animation" id="Animation_610dd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u6gaa"]
resource_name = "in"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.886262, 0.886261, 0.886262, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3jpn"]
_data = {
"RESET": SubResource("Animation_610dd"),
"in": SubResource("Animation_u6gaa")
}

[sub_resource type="Animation" id="Animation_oopqu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.866667, 0.811765, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8gblk"]
resource_name = "in"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.866667, 0.811765, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwa7u"]
_data = {
"RESET": SubResource("Animation_oopqu"),
"in": SubResource("Animation_8gblk")
}

[node name="Stats" type="Node2D"]
script = ExtResource("1_8b5yy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -33.0
offset_top = -25.0
offset_right = 1187.0
offset_bottom = 683.0
color = Color(0.275301, 0.405693, 0.27557, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="Node2D" parent="CanvasLayer/HBoxContainer"]

[node name="Title_Label" type="Node2D" parent="CanvasLayer/HBoxContainer/Labels"]
position = Vector2(0, -290)

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Labels/Title_Label"]
offset_left = -557.0
offset_top = -51.0
offset_right = 596.0
offset_bottom = 198.0
theme_override_fonts/font = ExtResource("2_jqj7o")
theme_override_font_sizes/font_size = 70
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username_Label" type="Node2D" parent="CanvasLayer/HBoxContainer/Labels"]
position = Vector2(0, -170)

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Labels/Username_Label"]
offset_left = -557.0
offset_top = -51.0
offset_right = 596.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 40
text = "Username: x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Date_Joined_Label" type="Node2D" parent="CanvasLayer/HBoxContainer/Labels"]
position = Vector2(0, -140)

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Labels/Date_Joined_Label"]
offset_left = -557.0
offset_top = -51.0
offset_right = 596.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("4_ffnnt")
theme_override_font_sizes/font_size = 20
text = "Date Joined: xx/xx/xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Weekly_PB_Label" type="Node2D" parent="CanvasLayer/HBoxContainer/Labels"]
position = Vector2(0, -100)

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Labels/Weekly_PB_Label"]
offset_left = -557.0
offset_top = -51.0
offset_right = -239.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 20
text = "Weekly PB: xx:xx:xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Total_Focus_Label" type="Node2D" parent="CanvasLayer/HBoxContainer/Labels"]
position = Vector2(0, -100)

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Labels/Total_Focus_Label"]
offset_left = 186.0
offset_top = -51.0
offset_right = 598.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 20
text = "Overall Focus Time: xx:xx:xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Focus_Time_PB_Label" type="Node2D" parent="CanvasLayer/HBoxContainer/Labels"]
position = Vector2(0, -100)

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Labels/Focus_Time_PB_Label"]
offset_left = -213.0
offset_top = -32.0
offset_right = 225.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 20
text = "Longest Focus Time: xx:xx:xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Node2D" parent="CanvasLayer/HBoxContainer"]

[node name="Home_Button" parent="CanvasLayer/HBoxContainer/Buttons" instance=ExtResource("3_tmf4h")]
position = Vector2(-450, -230)

[node name="Left_Arrow" type="Node2D" parent="CanvasLayer/HBoxContainer/Buttons"]
position = Vector2(-425, 100)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer/Buttons/Left_Arrow"]
modulate = Color(0.894922, 0.894922, 0.894922, 1)
scale = Vector2(-1.1, 1.1)
texture = ExtResource("6_v7wui")

[node name="Button" type="Button" parent="CanvasLayer/HBoxContainer/Buttons/Left_Arrow"]
modulate = Color(1, 1, 1, 0)
offset_left = -26.0
offset_top = -36.0
offset_right = 28.0
offset_bottom = 38.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HBoxContainer/Buttons/Left_Arrow"]
libraries = {
"": SubResource("AnimationLibrary_1c23r")
}

[node name="Right_Arrow" type="Node2D" parent="CanvasLayer/HBoxContainer/Buttons"]
position = Vector2(425, 100)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer/Buttons/Right_Arrow"]
texture = ExtResource("6_v7wui")

[node name="Button" type="Button" parent="CanvasLayer/HBoxContainer/Buttons/Right_Arrow"]
modulate = Color(1, 1, 1, 0)
offset_left = -29.0
offset_top = -41.0
offset_right = 25.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HBoxContainer/Buttons/Right_Arrow"]
libraries = {
"": SubResource("AnimationLibrary_g3jpn")
}

[node name="Graph" type="Node2D" parent="CanvasLayer/HBoxContainer"]
position = Vector2(0, -55)

[node name="Lines" type="Line2D" parent="CanvasLayer/HBoxContainer/Graph"]
z_index = 1
points = PackedVector2Array(-300, 15, -300, 330, 300, 330)

[node name="Hour_Marks" type="Node2D" parent="CanvasLayer/HBoxContainer/Graph"]
position = Vector2(0, 15)

[node name="Numbers" type="Label" parent="CanvasLayer/HBoxContainer/Graph/Hour_Marks"]
offset_left = -347.0
offset_top = 3.0
offset_right = -304.0
offset_bottom = 310.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 20
text = "10 
9  
8
7
6
5
4
3
2
1"
autowrap_mode = 3

[node name="Marks" type="Label" parent="CanvasLayer/HBoxContainer/Graph/Hour_Marks"]
offset_left = -311.0
offset_top = -12.0
offset_right = -304.0
offset_bottom = 305.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 20
text = "-
-
-
-
-
-
-
-
-
-"
autowrap_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Graph/Hour_Marks"]
offset_left = -387.0
offset_top = 185.0
offset_right = -318.0
offset_bottom = 213.0
rotation = -1.5708
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 20
text = "Hours"
autowrap_mode = 3

[node name="Days" type="Node2D" parent="CanvasLayer/HBoxContainer/Graph"]

[node name="Days" type="Label" parent="CanvasLayer/HBoxContainer/Graph/Days"]
offset_left = -295.0
offset_top = 335.0
offset_right = 299.0
offset_bottom = 385.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 25
text = " Sun   Mon   Tue   Wed   Thu   Fri   Sat"

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Graph/Days"]
offset_left = -295.0
offset_top = 335.0
offset_right = 299.0
offset_bottom = 424.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 25
text = "Days"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bars" type="Node2D" parent="CanvasLayer/HBoxContainer/Graph"]

[node name="Bar1" type="ProgressBar" parent="CanvasLayer/HBoxContainer/Graph/Bars"]
modulate = Color(0, 0, 0, 0.741176)
show_behind_parent = true
offset_left = -284.0
offset_top = 335.0
offset_right = -243.0
offset_bottom = 385.0
rotation = -1.5708
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Bar2" type="ProgressBar" parent="CanvasLayer/HBoxContainer/Graph/Bars"]
modulate = Color(0, 0, 0, 0.741176)
show_behind_parent = true
offset_left = -196.0
offset_top = 335.0
offset_right = -155.0
offset_bottom = 385.0
rotation = -1.5708
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Bar3" type="ProgressBar" parent="CanvasLayer/HBoxContainer/Graph/Bars"]
modulate = Color(0, 0, 0, 0.741176)
show_behind_parent = true
offset_left = -108.0
offset_top = 335.0
offset_right = -67.0
offset_bottom = 385.0
rotation = -1.5708
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Bar4" type="ProgressBar" parent="CanvasLayer/HBoxContainer/Graph/Bars"]
modulate = Color(0, 0, 0, 0.741176)
show_behind_parent = true
offset_left = -20.0
offset_top = 335.0
offset_right = 21.0
offset_bottom = 385.0
rotation = -1.5708
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Bar5" type="ProgressBar" parent="CanvasLayer/HBoxContainer/Graph/Bars"]
modulate = Color(0, 0, 0, 0.741176)
show_behind_parent = true
offset_left = 70.0
offset_top = 335.0
offset_right = 111.0
offset_bottom = 385.0
rotation = -1.5708
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Bar6" type="ProgressBar" parent="CanvasLayer/HBoxContainer/Graph/Bars"]
modulate = Color(0, 0, 0, 0.741176)
show_behind_parent = true
offset_left = 158.0
offset_top = 335.0
offset_right = 199.0
offset_bottom = 385.0
rotation = -1.5708
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Bar7" type="ProgressBar" parent="CanvasLayer/HBoxContainer/Graph/Bars"]
modulate = Color(0, 0, 0, 0.741176)
show_behind_parent = true
offset_left = 234.0
offset_top = 335.0
offset_right = 275.0
offset_bottom = 385.0
rotation = -1.5708
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Label_WeekNum" type="Label" parent="CanvasLayer/HBoxContainer/Graph"]
offset_left = -294.0
offset_top = -11.0
offset_right = 308.0
offset_bottom = 17.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 20
text = "Week X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_HoursDisplay" type="Label" parent="CanvasLayer/HBoxContainer/Graph"]
visible = false
offset_left = -294.0
offset_top = 14.0
offset_right = 308.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 20
text = "Hours: x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Badge" type="Node2D" parent="CanvasLayer/HBoxContainer"]
position = Vector2(400, -200)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer/Badge"]
modulate = Color(0.866667, 0.811765, 0, 1)
texture = ExtResource("7_xtto1")

[node name="Control" type="Control" parent="CanvasLayer/HBoxContainer/Badge"]
layout_mode = 3
anchors_preset = 0
offset_left = -48.0
offset_top = -57.0
offset_right = 51.0
offset_bottom = 60.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HBoxContainer/Badge"]
libraries = {
"": SubResource("AnimationLibrary_rwa7u")
}

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Badge"]
modulate = Color(1, 1, 1, 0)
offset_left = -105.0
offset_top = -81.0
offset_right = 107.0
offset_bottom = -46.0
theme_override_fonts/font = ExtResource("3_8lc0f")
theme_override_font_sizes/font_size = 25
text = "Founder"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Buttons/Home_Button" to="." method="_on_home_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Buttons/Left_Arrow/Button" to="." method="_on_button_mouse_entered_LEFTARROW"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Buttons/Left_Arrow/Button" to="." method="_on_button_mouse_exited_LEFTARROW"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Buttons/Left_Arrow/Button" to="." method="_on_button_pressed_LEFTARROW"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Buttons/Right_Arrow/Button" to="." method="_on_button_mouse_entered_RIGHTARROW"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Buttons/Right_Arrow/Button" to="." method="_on_button_mouse_exited_RIGHTARROW"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Buttons/Right_Arrow/Button" to="." method="_on_button_pressed_RIGHTARROW"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar1" to="." method="_on_bar_1_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar1" to="." method="bar_exited"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar2" to="." method="_on_bar_2_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar2" to="." method="bar_exited"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar3" to="." method="_on_bar_3_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar3" to="." method="bar_exited"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar4" to="." method="_on_bar_4_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar4" to="." method="bar_exited"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar5" to="." method="_on_bar_5_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar5" to="." method="bar_exited"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar6" to="." method="_on_bar_6_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar6" to="." method="bar_exited"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar7" to="." method="_on_bar_7_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Graph/Bars/Bar7" to="." method="bar_exited"]
[connection signal="mouse_entered" from="CanvasLayer/HBoxContainer/Badge/Control" to="." method="_on_control_mouse_entered_FOUNDER"]
[connection signal="mouse_exited" from="CanvasLayer/HBoxContainer/Badge/Control" to="." method="_on_control_mouse_exited_FOUNDER"]
